--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -7,12 +7,11 @@
 
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/form-elements.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/image-picker.css">
+
 
     <!-- Favicon and touch icons -->
     <link rel="shortcut icon" href="ico/favicon.png">
@@ -22,6 +21,8 @@
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
 
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/form-elements.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -30,19 +31,30 @@
 <body ng-app="amadeusounds-app" ng-cloak class="ng-cloak">
 
 <!-- NAVIGATION -->
-<nav class="navbar navbar-inverse" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="#">Amadeusounds</a>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-music"></span>AmadeuSounds</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a ui-sref="home">Home</a></li>
+                <li><a ui-sref="upload.first">Upload</a></li>
+                <li><a href="#">Dashboard</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a ui-sref="register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+        </div>
     </div>
-    <ul class="nav navbar-nav">
-        <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="login">Login</a></li>
-        <li><a ui-sref="register">Register</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-
-    </ul>
 </nav>
+
 
 <!-- MAIN CONTENT -->
 <div class="container">
@@ -57,7 +69,8 @@
 <!-- Begin scripts-->
 
 <!-- Libraries -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="app/libraries/jquery-1.11.1.min.js"></script>
+<script src="app/libraries/jquery.backstretch.min.js"></script>
 <script src="app/libraries/bootstrap.min.js" crossorigin="anonymous"></script>
 <script src="app/libraries/angular.js"></script>
 <script src="app/libraries/angular-ui-router.min.js"></script>
@@ -73,11 +86,11 @@
 <script src="app/libraries/vendor.js"></script>
 <script src="app/libraries/ng-password-strength.min.js"></script>
 <script src="app/libraries/angular-simple-logger.min.js"></script>
-
-<script src="app/libraries/jquery-1.11.1.min.js"></script>
-<script src="app/libraries/jquery.backstretch.min.js"></script>
 <script src="app/libraries/retina-1.1.0.min.js"></script>
-<script src="js/scripts.js"></script>
+
+<!-- Image plugins-->
+<script src="app/libraries/imagepreview.js"></script>
+<script src="app/libraries/image-picker.min.js"></script>
 
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -100,17 +113,19 @@
 
 <!-- Custom scripts -->
 <script src="app/app.js"></script>
+<script src="js/scripts.js"></script>
+<script src="js/uploadSong.js"></script>
 
 <!-- Services -->
 <script src="app/services/UserService.js"></script>
 
 <!-- Controllers -->
 <script src="app/controllers/UserController.js"></script>
+<script src="app/controllers/MusicGenresController.js"></script>
+<script src="app/controllers/UploadController.js"></script>
 <script src="app/controllers/login.js"></script>
 
 <!-- End scripts -->
 
-
-<!-- End body -->
 
 </html>
