--- a/src/main/resources/static/old/app/player/index.html
+++ b/src/main/resources/static/old/app/player/index.html
@@ -1,15 +1,12 @@
 <div id="player">
     <div class="container-fluid">
-        <div id="player-images" class="col-xs-12 col-sm-5 hidden-xs">
+        <div id="player-images" class="col-xs-12 col-sm-4 hidden-xs">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                scrambled it to make.</p>
         </div>
 
-        <div id="player-controls" class="col-xs-12 col-sm-7">
+        <div id="player-controls" class="col-xs-12 col-sm-8">
             <p>Song: <b>{{currentSong}}</b></p>
             <input type="range" name="time" min="0" max="100" ng-model="$root.percentage" ng-change="rangeChanged()">
 
