--- a/src/main/resources/static/old/app/player/index.html
+++ b/src/main/resources/static/old/app/player/index.html
@@ -1,12 +1,12 @@
 <div id="player">
     <div class="container-fluid">
-        <div id="player-images" class="col-xs-12 col-sm-4 hidden-xs">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make.</p>
-        </div>
+        <!--<div id="player-images" class="col-xs-12 col-sm-4 hidden-xs">-->
+            <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the-->
+                <!--industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and-->
+                <!--scrambled it to make.</p>-->
+        <!--</div>-->
 
-        <div id="player-controls" class="col-xs-12 col-sm-8">
+        <div id="player-controls" class="col-xs-12">
             <p>Song: <b>{{currentSong}}</b></p>
             <input type="range" name="time" min="0" max="100" ng-model="$root.percentage" ng-change="rangeChanged()">
 
