--- a/src/main/resources/static/old/index.html
+++ b/src/main/resources/static/old/index.html
@@ -30,7 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><i class="glyphicon glyphicon-music"></i> AmadeuSounds</a>
+            <!--<i class="glyphicon glyphicon-music"></i>-->
+            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png" alt="logo" height="40px"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
