Background image fixed Search box added

--- a/src/main/resources/static/old/app/home/index.html
+++ b/src/main/resources/static/old/app/home/index.html
@@ -1,4 +1,12 @@
+<style>
+    body {
+        background-image: none !important;
+    }
+</style>
 <h2>Home</h2>
+<script>
+    $.backstretch("destroy", false);
+</script>
 
 <!--<div>-->
     <!--<div ng-repeat="song in songs">-->
