--- a/src/main/resources/static/old/index.html
+++ b/src/main/resources/static/old/index.html
@@ -38,6 +38,7 @@
                 <li><a ui-sref="home">Home</a></li>
                 <li><a ui-sref="home">Trending</a></li>
                 <li><a ui-sref="upload.first">Upload</a></li>
+                <li><input id="search" type="text" placeholder="Search..."/></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!isAuthenticated"><a ui-sref="register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
