--- a/src/main/resources/static/old/index.html
+++ b/src/main/resources/static/old/index.html
@@ -37,6 +37,19 @@
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
                 <li><a ui-sref="home">Trending</a></li>
+                <li class="dropdown">
+                    <a ui-sref="home" class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="category in categories"><a href="#">{{category.name}}</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a ui-sref="home" class="dropdown-toggle" data-toggle="dropdown">Tags <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                            <li ng-repeat="tag in tags"><a href="#"><img ng-src="http://localhost:8080/api/tags/{{tag.id}}/image" width="12px"> {{tag.name}}</a></li>
+                    </ul>
+                </li>
+
                 <li><a ui-sref="upload.first">Upload</a></li>
                 <li><input id="search" type="text" placeholder="Search..."/></li>
             </ul>
@@ -102,9 +115,13 @@
 <!-- Services -->
 <script src="app/services/UserService.js"></script>
 <script src="app/authentication/authenticationService.js"></script>
-<script src="app/interceptor/interceptor.js"></script>
 <script src="app/player/playerService.js"></script>
 <script src="app/home/homeService.js"></script>
+<script src="app/categories/categoriesService.js"></script>
+<script src="app/tags/tagsService.js"></script>
+<!-- Config -->
+<script src="app/interceptor/interceptor.js"></script>
+<script src="app/menu/menuSetup.js"></script>
 <!-- Controllers -->
 <script src="app/controllers/UserController.js"></script>
 <script src="app/controllers/SongUploadController.js"></script>
