--- a/src/main/resources/static/old/index.html
+++ b/src/main/resources/static/old/index.html
@@ -54,7 +54,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ui-sref="upload.first"><i class="glyphicon glyphicon-open"></i> Upload</a></li>
-                <li ng-if="isAuthenticated"><a ui-sref="profile">My Profile</a></li>
+                <li ng-if="isAuthenticated"><a ui-sref="profile"><i class="glyphicon glyphicon-user"></i> My Profile</a></li>
                 <li ng-if="!isAuthenticated"><a ui-sref="register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li ng-if="!isAuthenticated"><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 <li ng-if="isAuthenticated"><a ng-click="logout()" href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
