--- a/src/main/resources/static/old/index.html
+++ b/src/main/resources/static/old/index.html
@@ -31,7 +31,8 @@
                 <span class="icon-bar"></span>
             </button>
             <!--<i class="glyphicon glyphicon-music"></i>-->
-            <a class="navbar-brand" href=#" ui-sref="home-index"><img id="logo" src="img/logo.png" alt="logo" height="40px"></a>
+            <a class="navbar-brand" href=#" ui-sref="home-index"><img id="logo" src="img/logo.png" alt="logo"
+                                                                      height="40px"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -40,24 +41,35 @@
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li ng-repeat="category in categories"><a ui-sref="home({arg1: 'categories', arg2: category.id})">{{category.name}}</a></li>
+                        <li ng-repeat="category in categories"><a
+                                ui-sref="home({arg1: 'categories', arg2: category.id})">{{category.name}}</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">Tags <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                            <li ng-repeat="tag in tags"><a ui-sref="home({arg1: 'tags', arg2: tag.id})"><img ng-src="http://localhost:8080/api/tags/{{tag.id}}/image" width="12px"> {{tag.name}}</a></li>
+                        <li ng-repeat="tag in tags"><a ui-sref="home({arg1: 'tags', arg2: tag.id})"><img
+                                ng-src="http://localhost:8080/api/tags/{{tag.id}}/image" width="12px"> {{tag.name}}</a>
+                        </li>
                     </ul>
                 </li>
-                <li><input id="search" type="text" placeholder="Search..."/></li>
+                <li>
+                    <form ng-submit="search()">
+                        <input ng-model="searchTerm" id="search" type="text" placeholder="Search..."/>
+                    </form>
+                </li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ui-sref="upload.first"><i class="glyphicon glyphicon-open"></i> Upload</a></li>
-                <li ng-if="isAuthenticated"><a ui-sref="profile"><i class="glyphicon glyphicon-user"></i> My Profile</a></li>
-                <li ng-if="!isAuthenticated"><a ui-sref="register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li ng-if="!isAuthenticated"><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li ng-if="isAuthenticated"><a ng-click="logout()" href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                <li ng-if="isAuthenticated"><a ui-sref="profile"><i class="glyphicon glyphicon-user"></i> My Profile</a>
+                </li>
+                <li ng-if="!isAuthenticated"><a ui-sref="register"><span class="glyphicon glyphicon-user"></span> Sign
+                    Up</a></li>
+                <li ng-if="!isAuthenticated"><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span>
+                    Login</a></li>
+                <li ng-if="isAuthenticated"><a ng-click="logout()" href="#"><span
+                        class="glyphicon glyphicon-log-in"></span> Logout</a></li>
             </ul>
         </div>
     </div>
